feat: kms 57 add bib and clothes recognize
