# swagger.json
@@ -3,17 +3,20 @@
   "info": {
     "title": "KMS Picture Finder API",
     "description": "Finding pictures have your face in Google Drive public folder or Facebook public album.",
-    "version": "2.0.0"
+    "version": "2.1.0"
   },
   "servers": [
     {
-      "url": "http://34.143.233.85"
+      "url": "https://dev.be.picturesfinder.software"
+    },
+    {
+      "url": "http://35.240.135.215"
     },
     {
       "url": "https://be.picturesfinder.software"
     },
     {
-      "url": "http://34.143.233.85:3000"
+      "url": "http://34.126.120.6"
     },
     {
       "url": "http://localhost:3000"
@@ -38,14 +41,14 @@
     }
   ],
   "paths": {
-    "/api/facebook": {
+    "/api/facebook/face": {
       "post": {
         "tags": [
           "facebook"
         ],
         "summary": "Finding your face in Facebook album",
         "description": "Finding your face in Facebook public album.",
-        "operationId": "facebook",
+        "operationId": "facebookFace",
         "requestBody": {
           "content": {
             "multipart/form-data": {
@@ -86,13 +89,13 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/SessionResponse"
+                  "$ref": "#/components/schemas/Response"
                 }
               }
             }
           },
           "400": {
-            "description": "Access token and cookie is required |\nTarget image is required |\nFacebook album url is invalid |\nEmail is invalid |\nOnly .png, .jpg and .jpeg format allowed",
+            "description": "Access token and cookie is required |\nTarget image is required |\nFacebook album url is invalid |\nEmail is invalid |\nToken or cookie is expired |\nOnly .png, .jpg and .jpeg format allowed",
             "content": {
               "application/json": {
                 "schema": {
@@ -124,30 +127,40 @@
         }
       }
     },
-    "/api/gg-drive": {
+    "/api/facebook/bib": {
       "post": {
         "tags": [
-          "google"
+          "facebook"
         ],
-        "summary": "Finding your face in Drive folder",
-        "description": "Finding your face in Google Drive public folder.",
-        "operationId": "google",
+        "summary": "Finding your BIB in Facebook album",
+        "description": "Finding your BIB in Facebook public album.",
+        "operationId": "facebookBIB",
         "requestBody": {
           "content": {
-            "multipart/form-data": {
+            "json": {
               "schema": {
                 "type": "object",
                 "required": [
-                  "folderUrl",
-                  "targetImage"
+                  "accessToken",
+                  "cookie",
+                  "albumUrl",
+                  "bib"
                 ],
                 "properties": {
-                  "folderUrl": {
+                  "accessToken": {
                     "type": "string"
                   },
-                  "targetImage": {
-                    "type": "string",
-                    "format": "binary"
+                  "cookie": {
+                    "type": "string"
+                  },
+                  "albumUrl": {
+                    "type": "string"
+                  },
+                  "bib": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
                   }
                 }
               }
@@ -167,7 +180,316 @@
             }
           },
           "400": {
-            "description": "Target image is required |\nOnly .png, .jpg and .jpeg format allowed",
+            "description": "Access token and cookie is required |\nBIB is required |\nFacebook album url is invalid |\nEmail is invalid | \nToken or cookie is expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Something went wrong",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/facebook/clothes": {
+      "post": {
+        "tags": [
+          "facebook"
+        ],
+        "summary": "Finding your picture with clothes in Facebook album",
+        "description": "Finding your picture with clothes in Facebook public album.",
+        "operationId": "facebookClothes",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "accessToken",
+                  "cookie",
+                  "albumUrl",
+                  "targetImage"
+                ],
+                "properties": {
+                  "accessToken": {
+                    "type": "string"
+                  },
+                  "cookie": {
+                    "type": "string"
+                  },
+                  "albumUrl": {
+                    "type": "string"
+                  },
+                  "targetImage": {
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "email": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Access token and cookie is required |\nTarget image is required |\nFacebook album url is invalid |\nEmail is invalid |\nToken or cookie is expired |\nOnly .png, .jpg and .jpeg format allowed",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "413": {
+            "description": "File too large",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Something went wrong",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/gg-drive/face": {
+      "post": {
+        "tags": [
+          "google"
+        ],
+        "summary": "Finding your face in Drive folder",
+        "description": "Finding your face in Google Drive public folder.",
+        "operationId": "googleFace",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "folderUrl",
+                  "targetImage"
+                ],
+                "properties": {
+                  "folderUrl": {
+                    "type": "string"
+                  },
+                  "targetImage": {
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "email": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Target image is required |\nEmail is invalid |\nOnly .png, .jpg and .jpeg format allowed",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "413": {
+            "description": "File too large",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Something went wrong",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/gg-drive/bib": {
+      "post": {
+        "tags": [
+          "google"
+        ],
+        "summary": "Finding your bib in Drive folder",
+        "description": "Finding your bib in Google Drive public folder.",
+        "operationId": "googleBib",
+        "requestBody": {
+          "content": {
+            "json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "folderUrl",
+                  "bib"
+                ],
+                "properties": {
+                  "folderUrl": {
+                    "type": "string"
+                  },
+                  "bib": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Target image is required |\nEmail is invalid |\nOnly .png, .jpg and .jpeg format allowed",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "413": {
+            "description": "File too large",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Something went wrong",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/gg-drive/clothes": {
+      "post": {
+        "tags": [
+          "google"
+        ],
+        "summary": "Finding your face with clothes in Drive folder",
+        "description": "Finding your face with clothes in Google Drive public folder.",
+        "operationId": "googleClothes",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "folderUrl",
+                  "targetImage"
+                ],
+                "properties": {
+                  "folderUrl": {
+                    "type": "string"
+                  },
+                  "targetImage": {
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "email": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Target image is required |\nEmail is invalid |\nOnly .png, .jpg and .jpeg format allowed",
             "content": {
               "application/json": {
                 "schema": {
@@ -288,28 +610,12 @@
   },
   "components": {
     "schemas": {
-      "SessionResponse": {
+      "Response": {
         "type": "object",
         "properties": {
           "sessionId": {
             "type": "number",
             "example": 1
-          }
-        }
-      },
-      "Response": {
-        "type": "array",
-        "items": {
-          "type": "object",
-          "properties": {
-            "id": {
-              "type": "string",
-              "example": 123456789
-            },
-            "url": {
-              "type": "string",
-              "example": "https://abc.xyz/def?q=rt"
-            }
           }
         }
       },
@@ -324,13 +630,25 @@
             "type": "string",
             "example": "https://abc.xyz/def?q=rt"
           },
+          "targetImageUrl": {
+            "type": "string",
+            "example": "https://abc.xyz/def?q=rt"
+          },
+          "bib": {
+            "type": "string",
+            "example": null
+          },
           "totalImages": {
             "type": "number",
             "example": 322
           },
           "type": {
             "type": "string",
-            "example": "FACEBOOK"
+            "example": "FACEBOOK | DRIVE"
+          },
+          "typeRecognize": {
+            "type": "string",
+            "example": "FACE | BIB | CLOTHES"
           },
           "isFinished": {
             "type": "boolean",
